@@ -8,7 +8,7 @@ jobs:
         os:
           - ubuntu-22.04
           - ubuntu-20.04
-          #- macos-latest
+          - macos-latest
         arch:
           - posix
         buildsystem:
