@@ -13,7 +13,7 @@ http://code.google.com/p/c-pthread-queue/
 #include <mach/clock.h>
 #include <mach/mach.h>
 
-#include <csp/arch/posix/pthread_queue.h>
+#include "../posix/pthread_queue.h"
 
 pthread_queue_t * pthread_queue_create(int length, size_t item_size) {
 
@@ -152,4 +152,13 @@ int pthread_queue_items(pthread_queue_t * queue) {
 	pthread_mutex_unlock(&(queue->mutex));
 
 	return items;
+}
+
+int pthread_queue_free(pthread_queue_t * queue) {
+
+	pthread_mutex_lock(&(queue->mutex));
+	int free = queue->size - queue->items;
+	pthread_mutex_unlock(&(queue->mutex));
+
+	return free;
 }
