@@ -2,11 +2,11 @@
 
 #include <csp/csp_sfp.h>
 
-#include <malloc.h>
+#include <stdlib.h>
 
 #include <csp/csp_buffer.h>
 #include <csp/csp_debug.h>
-#include <endian.h>
+#include <csp/csp_endian.h>
 
 #include "csp_conn.h"
 
